<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.tecpuc.basicform.MainViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNickName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:hint="@string/what_is_your_nickname"
                        android:text="@={viewModel.person_name}"
                        android:inputType="textPersonName|textCapSentences"
                        tools:targetApi="o" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/what_is_your_age"
                            android:maxLength="3"
                            android:text="@={viewModel.person_age}"
                            android:inputType="number"
                            tools:targetApi="o" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/what_is_your_phone"
                            android:text="@={viewModel.person_phone}"
                            android:inputType="number"
                            tools:targetApi="o" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputRg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextRg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/what_is_your_rg"
                            android:text="@={viewModel.person_rg}"
                            android:inputType="number"
                            tools:targetApi="o" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputCpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextCpf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/what_is_your_cpf"
                            android:text="@={viewModel.person_cpf}"
                            android:inputType="number"
                            tools:targetApi="o" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/what_is_your_city"
                            android:text="@={viewModel.person_city}"
                            android:inputType="text"
                            tools:targetApi="o" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinnerState"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:entries="@array/state">

                    </Spinner>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/reem_kufi"
                    android:gravity="center"
                    android:text="GENERO">

                </TextView>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="-5dp"
                        android:paddingEnd="10dp"
                        android:text="HOMEM"
                        android:textSize="12dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="-5dp"
                        android:paddingEnd="10dp"
                        android:text="MULHER"
                        android:textSize="12dp" />

                    <RadioButton
                        android:id="@+id/RBothers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="-5dp"
                        android:paddingEnd="10dp"
                        android:text="OUTROS"
                        android:textSize="12dp" />
                </RadioGroup>

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Finalizar">

                </Button>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
</layout>